fix alignment of dropdown with the header nav

--- a/assets/component-localization-form.css
+++ b/assets/component-localization-form.css
@@ -256,7 +256,8 @@ noscript .localization-selector.link {
 }
 
 .header__icons--localization .disclosure__list-wrapper {
-  bottom: auto;
+  bottom: initial;
+  top: calc(100% + 1rem);
   right: 0;
 }
 
